Start new landing page

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Lato&display=swap"
       rel="stylesheet"
     />
     <title>Jogos de improvisação</title>
