Git add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,21 @@
       href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Lato&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PTCYGV42K5"
+    ></script>
+
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-PTCYGV42K5')
+    </script>
     <title>Jogos de improvisação</title>
   </head>
   <body>
