--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/cello.jpeg" type="image" />
     <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
     <script>
       ;(function (h, o, t, j, a, r) {
