--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/cello.jpeg" type="image" />
+    <link rel="icon" href="%PUBLIC_URL%/cello.jpeg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello.jpeg" />
+    <link rel="manifest" href="%PUBLIC_URL%/cello.jpeg" />
+
     <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
     <script>
       ;(function (h, o, t, j, a, r) {
