--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="%PUBLIC_URL%/cello.jpeg" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello.jpeg" />
-    <link rel="manifest" href="%PUBLIC_URL%/cello.jpeg" />
 
-    <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
-    <script>
-      ;(function (h, o, t, j, a, r) {
-        h.hj =
-          h.hj ||
-          function () {
-            ;(h.hj.q = h.hj.q || []).push(arguments)
-          }
-        h._hjSettings = { hjid: 2365093, hjsv: 6 }
-        a = o.getElementsByTagName('head')[0]
-        r = o.createElement('script')
-        r.async = 1
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv
-        a.appendChild(r)
-      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=')
-    </script>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Lato&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PTCYGV42K5"></script>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <script>
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
+  <!-- Primary Meta Tags -->
+  <title>Jogos de improvisação</title>
+  <meta name="title" content="Jogos de improvisação">
+  <meta name="author" content="Marta Brietzke">
+  <meta name="description"
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos.">
+  <meta name="keywords"
+    content="violoncelo, cello, aulas de violoncelo, improvisação, Marta Brietzke, música, contemporânea">
 
-      gtag('config', 'G-PTCYGV42K5')
-    </script>
-    <title>Jogos de improvisação</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://jogoscello.com/">
+  <meta property="og:title" content="Jogos de improvisação">
+  <meta property="og:description"
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos.">
+  <meta property="og:image" content="%PUBLIC_URL%/social.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://jogoscello.com/">
+  <meta property="twitter:title" content="Jogos de improvisação">
+  <meta property="twitter:description"
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos.">
+  <meta property="twitter:image" content="%PUBLIC_URL%/social.png">
+
+  <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
+  <script>
+    ;(function (h, o, t, j, a, r) {
+      h.hj =
+        h.hj ||
+        function () {
+          ;(h.hj.q = h.hj.q || []).push(arguments)
+        }
+      h._hjSettings = { hjid: 2365093, hjsv: 6 }
+      a = o.getElementsByTagName('head')[0]
+      r = o.createElement('script')
+      r.async = 1
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv
+      a.appendChild(r)
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=')
+  </script>
+
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Lato&display=swap" rel="stylesheet" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PTCYGV42K5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
+
+    gtag('config', 'G-PTCYGV42K5')
+  </script>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
