--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/social.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- Primary Meta Tags -->
   <title>Jogos de improvisação</title>
@@ -33,11 +35,11 @@
 
   <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
   <script>
-    ;(function (h, o, t, j, a, r) {
+    ; (function (h, o, t, j, a, r) {
       h.hj =
         h.hj ||
         function () {
-          ;(h.hj.q = h.hj.q || []).push(arguments)
+          ; (h.hj.q = h.hj.q || []).push(arguments)
         }
       h._hjSettings = { hjid: 2365093, hjsv: 6 }
       a = o.getElementsByTagName('head')[0]
