--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="/cello-comprimido.jpeg" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
-    <link rel="manifest" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
-
-    <link rel="icon" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello.jpeg" /> -->
-    <link rel="manifest" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/social.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Primary Meta Tags -->
     <title>Jogos de improvisação</title>
@@ -32,7 +28,7 @@
       property="og:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/social.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/cello-comprimido.jpeg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -42,7 +38,7 @@
       property="twitter:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/social.png" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/cello-comprimido.jpeg" />
 
     <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
     <script>
