--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="/cello-comprimido.jpeg" type="image/x-icon" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
     <link rel="manifest" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
+    <link rel="icon" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
 
     <!-- Primary Meta Tags -->
     <title>Jogos de improvisação</title>
