--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       property="twitter:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/social.png" />
+    <!-- <meta property="twitter:image" content="%PUBLIC_URL%/social.png" /> -->
 
     <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
     <script>
