--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="/cello-comprimido.jpeg" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
-    <link rel="manifest" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
-    <link rel="icon" href="%PUBLIC_URL%/cello-comprimido.jpeg" />
+    <link rel="shortcut icon" href="/cello-comprimido.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-comprimido.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/cello-comprimido.png" />
+    <link rel="icon" href="%PUBLIC_URL%/cello-comprimido.png" />
 
     <!-- Primary Meta Tags -->
     <title>Jogos de improvisação</title>
@@ -29,7 +29,7 @@
       property="og:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/cello-comprimido.jpeg" />
+    <meta property="og:image" content="%PUBLIC_URL%/cello-comprimido.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
