--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/cello-comprimido.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-comprimido.png" />
     <link rel="manifest" href="%PUBLIC_URL%/cello-comprimido.png" />
     <link rel="icon" href="%PUBLIC_URL%/cello-comprimido.png" />
