--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       name="keywords"
       content="violoncelo, cello, aulas de violoncelo, improvisação, Marta Brietzke, música, contemporânea"
     />
+    <meta name="image" content="%PUBLIC_URL%/cello-comprimido.png" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
