--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
       name="keywords"
       content="violoncelo, cello, aulas de violoncelo, improvisação, Marta Brietzke, música, contemporânea"
     />
-    <meta name="image" content="%PUBLIC_URL%/cello-comprimido.png" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -30,7 +29,7 @@
       property="og:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/cello-comprimido.png" />
+    <meta property="og:image" content="./cello-comprimido.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
