--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,59 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-comprimido.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/cello-comprimido.png" />
-    <link rel="icon" href="%PUBLIC_URL%/cello-comprimido.png" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/social.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Primary Meta Tags -->
     <title>Jogos de improvisação</title>
+    <meta name="title" content="Jogos de improvisação" />
+    <meta name="author" content="Marta Brietzke" />
+    <meta
+      name="description"
+      content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
+    />
+    <meta
+      name="keywords"
+      content="violoncelo, cello, aulas de violoncelo, improvisação, Marta Brietzke, música, contemporânea"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jogoscello.com/" />
+    <meta property="og:title" content="Jogos de improvisação" />
+    <meta
+      property="og:description"
+      content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/social.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jogoscello.com/" />
+    <meta property="twitter:title" content="Jogos de improvisação" />
+    <meta
+      property="twitter:description"
+      content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
+    />
+    <meta property="twitter:image" content="%PUBLIC_URL%/social.png" />
+
+    <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
+    <script>
+      ;(function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            ;(h.hj.q = h.hj.q || []).push(arguments)
+          }
+        h._hjSettings = { hjid: 2365093, hjsv: 6 }
+        a = o.getElementsByTagName('head')[0]
+        r = o.createElement('script')
+        r.async = 1
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv
+        a.appendChild(r)
+      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=')
+    </script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
