--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-comprimido.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/cello-comprimido.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-logo.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Primary Meta Tags -->
     <title>Jogos de improvisação</title>
@@ -28,7 +28,7 @@
       property="og:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/cello-comprimido.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/cello-logo.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -38,7 +38,7 @@
       property="twitter:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/cello-comprimido.png" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/cello-logo.png" />
 
     <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
     <script>
