--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       property="og:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/cello-logo.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/social.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -38,7 +38,7 @@
       property="twitter:description"
       content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos."
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/cello-logo.png" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/social.png" />
 
     <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
     <script>
