--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="icon" href="%PUBLIC_URL%/cello-logo.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-logo.png" />
 
   <!-- Primary Meta Tags -->
   <title>Jogos de improvisação</title>
