--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,19 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/social.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-logo.png">
+  <link rel="icon" href="%PUBLIC_URL%/cello-logo.png">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
   <!-- Primary Meta Tags -->
   <title>Jogos de improvisação</title>
   <meta name="title" content="Jogos de improvisação">
   <meta name="author" content="Marta Brietzke">
   <meta name="description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
   <meta name="keywords"
     content="violoncelo, cello, aulas de violoncelo, improvisação, Marta Brietzke, música, contemporânea">
 
@@ -22,7 +23,7 @@
   <meta property="og:url" content="https://jogoscello.com/">
   <meta property="og:title" content="Jogos de improvisação">
   <meta property="og:description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
   <meta property="og:image" content="%PUBLIC_URL%/social.png">
 
   <!-- Twitter -->
@@ -30,7 +31,7 @@
   <meta property="twitter:url" content="https://jogoscello.com/">
   <meta property="twitter:title" content="Jogos de improvisação">
   <meta property="twitter:description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sujeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
   <meta property="twitter:image" content="%PUBLIC_URL%/social.png">
 
   <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
