--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/cello-logo.png">
-  <link rel="icon" href="%PUBLIC_URL%/cello-logo.png">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/cello-200x200.png">
+  <link rel="icon" href="%PUBLIC_URL%/images/cello-200x200.png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
   <!-- Primary Meta Tags -->
@@ -24,7 +24,21 @@
   <meta property="og:title" content="Jogos de improvisação">
   <meta property="og:description"
     content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
-  <meta property="og:image" content="%PUBLIC_URL%/social.png">
+  <!-- Start social horizontal image -->
+  <meta property="og:image" content="%PUBLIC_URL%/images/social-1200x627.png">
+  <meta property="og:image:secure_url" content="%PUBLIC_URL%/images/social-1200x627.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="627">
+  <meta property="og:image:alt" content="O desenho de um violoncelo com pássaros segurando suas cordas">
+  <!-- Start social square image -->
+  <meta property="og:image" content="%PUBLIC_URL%/images/cello-200x200.png">
+  <meta property="og:image:secure_url" content="%PUBLIC_URL%/images/cello-200x200.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="200">
+  <meta property="og:image:height" content="200">
+  <meta property="og:image:alt" content="O desenho de um violoncelo com pássaros segurando suas cordas">
+  <!-- END of Open Graph / Facebook -->
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -32,7 +46,7 @@
   <meta property="twitter:title" content="Jogos de improvisação">
   <meta property="twitter:description"
     content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
-  <meta property="twitter:image" content="%PUBLIC_URL%/social.png">
+  <meta property="twitter:image" content="%PUBLIC_URL%/images/social-1200x627.png">
 
   <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
   <script>
