--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <meta name="title" content="Jogos de improvisação">
   <meta name="author" content="Marta Brietzke">
   <meta name="description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus estudantes.">
   <meta name="keywords"
     content="violoncelo, cello, aulas de violoncelo, improvisação, Marta Brietzke, música, contemporânea">
 
@@ -22,7 +22,7 @@
   <meta property="og:url" content="https://jogoscello.com/">
   <meta property="og:title" content="Jogos de improvisação">
   <meta property="og:description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus estudantes.">
   <!-- Start social horizontal image -->
   <meta property="og:image" content="%PUBLIC_URL%/images/social-1200x627.png">
   <meta property="og:image:secure_url" content="%PUBLIC_URL%/images/social-1200x627.png">
@@ -44,7 +44,7 @@
   <meta property="twitter:url" content="https://jogoscello.com/">
   <meta property="twitter:title" content="Jogos de improvisação">
   <meta property="twitter:description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus estudantes.">
   <meta property="twitter:image" content="%PUBLIC_URL%/images/social-1200x627.png">
 
   <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
