Change alunos to estudantes (#33)
* change estudents

* Update the rest of "alunos"

* Fix lint issues

Co-authored-by: Rodrigo Avellar <roavellarm@gmail.com>
Co-authored-by: Rodrigo Avellar <18143403+roavellarm@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,12 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/cello-200x200.png">
   <link rel="icon" href="%PUBLIC_URL%/images/cello-200x200.png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-
   <!-- Primary Meta Tags -->
   <title>Jogos de improvisação</title>
   <meta name="title" content="Jogos de improvisação">
   <meta name="author" content="Marta Brietzke">
   <meta name="description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus estudantes.">
   <meta name="keywords"
     content="violoncelo, cello, aulas de violoncelo, improvisação, Marta Brietzke, música, contemporânea">
 
@@ -23,7 +22,7 @@
   <meta property="og:url" content="https://jogoscello.com/">
   <meta property="og:title" content="Jogos de improvisação">
   <meta property="og:description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus estudantes.">
   <!-- Start social horizontal image -->
   <meta property="og:image" content="%PUBLIC_URL%/images/social-1200x627.png">
   <meta property="og:image:secure_url" content="%PUBLIC_URL%/images/social-1200x627.png">
@@ -45,7 +44,7 @@
   <meta property="twitter:url" content="https://jogoscello.com/">
   <meta property="twitter:title" content="Jogos de improvisação">
   <meta property="twitter:description"
-    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus alunos.">
+    content="Jogos de improvisação musical coletiva, apresentados como planejamento de aulas e guias para as atividades sugeridas para professores a seus estudantes.">
   <meta property="twitter:image" content="%PUBLIC_URL%/images/social-1200x627.png">
 
   <!-- Hotjar Tracking Code for https://jogoscello.com/ -->
